// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Talk /> does not render the description 1`] = `
.c0 {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 22px;
  margin: 0;
}

@media (min-width:760px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class=""
        >
          <h4
            class="c2"
          >
            <a>
              Workshop React: da web ao app!
            </a>
          </h4>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Talk /> does not render the language 1`] = `
.c0 {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 22px;
  margin: 0;
}

@media (min-width:760px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class=""
        >
          <h4
            class="c2"
          >
            <a>
              Workshop React: da web ao app!
            </a>
          </h4>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Talk /> renders properly 1`] = `
.c0 {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 22px;
  margin: 0;
}

.c3 {
  font-weight: 700;
  margin: 0 0 10px;
}

.c4 {
  margin: 0 0 5px;
}

@media (min-width:760px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class=""
        >
          <h4
            class="c2"
          >
            <a>
              Workshop React: da web ao app!
            </a>
          </h4>
          <p
            class="c3"
            data-testid="talk-language"
          >
            article.languagePrefix
             
            languages.pt
          </p>
          <p
            class="c4"
            data-testid="talk-description"
          >
            blabla
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
